syntax = "proto3";

option go_package = ".;service";

service SayHello {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string requestMessage = 1;
  string name = 2;
}

message HelloResponse {
  string responseMessage = 1;
}